--- a/template/src/index.html
+++ b/template/src/index.html
@@ -2,7 +2,9 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
     <title>{{ name }}</title>
+    <link rel="shortcut icon" type="image/x-icon" href="static/favicon.png">
   </head>
   <body>
     <div id="app"></div>
