--- a/template/src/index.html
+++ b/template/src/index.html
@@ -6,8 +6,13 @@
     <title>{{ name }}</title>
     <link rel="shortcut icon" type="image/x-icon" href="static/favicon.png">
   </head>
+  <style>
+  [v-cloak] {
+    opacity: 1;
+  }
+  </style>
   <body>
-    <div id="app"></div>
+    <div id="app" v-cloak></div>
     <!-- built files will be auto injected -->
   </body>
 </html>
