feat(app): Add material icons fonts

--- a/template/src/assets/styles/_fonts.scss
+++ b/template/src/assets/styles/_fonts.scss
@@ -1,4 +1,8 @@
 $fa-font-path: '../../../node_modules/font-awesome/fonts';
 @import '../../../node_modules/font-awesome/scss/font-awesome';
+
 $roboto-font-path: '../../../node_modules/roboto-fontface/fonts';
 @import '../../../node_modules/roboto-fontface/css/roboto/sass/roboto-fontface';
+
+$material-font-path: '../../../node_modules/material-design-icons-font/iconfont/';
+@import '../../../node_modules/material-design-icons-font/iconfont/material-icons.scss';
